fixed alignment of blog posts

--- a/_sass/homepage-style.scss
+++ b/_sass/homepage-style.scss
@@ -197,6 +197,7 @@ p {
 
 .blog-list {
     list-style: none;
+    padding: 0px;
 }
 
 .blog-title {
